--- a/style/general.scss
+++ b/style/general.scss
@@ -6,7 +6,6 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
 }
 
 .container {
@@ -16,6 +15,7 @@ body {
 
 ul, li {
     list-style: none;
+    color: black;
 }
 
 .row {
